objects/SpectrumCredentials__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Endpoint__c</fullName>
        <description>The Spectrum endpoint to be used for the service. All endpoints must end in /clientlistservicejson?rt=1000000003 to be directed appropriately to the Spectrum service.</description>
        <label>Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>The password required by the Spectrum service.</description>
        <label>Password</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>The username required by the Spectrum service.</description>
        <label>Username</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>SpectrumCredentials</label>
</CustomObject>